Changes in Option Controller
